Implement API interfaces and controllers for Email, Atividade, CheckinManual, and Usuario, including DTOs and service layers. Enhance exception handling and add Swagger annotations for API documentation.